# claude-skills-workshop

./: Makefile  README.md  WORKSHOP.md  docker-compose.yaml  openapi.yaml  pyproject.toml
app/: main.py  models.py
app/api/: search.py
app/domain/: emissions.py  pricing.py  risk.py  routes.py
app/services/: mcp_client.py  planner.py  validator.py
app/static/: app.js  index.html  styles.css
mcp/: server.py
skills/: README.md
tests/: conftest.py
tests/integration/: test_search_integration.py
tests/properties/: test_invariants.py
tests/unit/: test_scoring.py
workshop/: README.md  showcase.md  stage1-foundations.md  stage2-orchestration.md  stage3-workflow-skills.md
